Support Java 20 in Build