@@ -9,14 +9,15 @@ import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 
 public class UtilTests {
 
     private final ClientLogger logger = new ClientLogger(UtilTests.class);
 
     @Test
-    public void testGetURL() throws MalformedURLException {
+    public void testGetURL() throws MalformedURLException, URISyntaxException {
         String asyncOpUrl = "https://management.azure.com/subscriptions/000/providers/Microsoft.Network/locations/eastus/operations/123";
         String locationUrl = "https://management.azure.com/subscriptions/000/resourceGroups/rg86829b7a87d74/providers/Microsoft.Search/searchServices/ss3edfb54d";
 
@@ -24,8 +25,8 @@ public class UtilTests {
         headers.set("Azure-AsyncOperation", asyncOpUrl);
         headers.set("Location", locationUrl);
 
-        Assertions.assertEquals(new URL(asyncOpUrl), Util.getAzureAsyncOperationUrl(headers, logger));
-        Assertions.assertEquals(new URL(locationUrl), Util.getLocationUrl(headers, logger, true));
+        Assertions.assertEquals(new URI(asyncOpUrl).toURL(), Util.getAzureAsyncOperationUrl(headers, logger));
+        Assertions.assertEquals(new URI(locationUrl).toURL(), Util.getLocationUrl(headers, logger, true));
     }
 
     @Test
